# qwen

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
examples/: convers_explame.rs
src/: client.rs  config.rs  converse.rs  err.rs  lib.rs  types.rs
