[package]
name = "qwen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qwen"
path = "src/bin/qwen.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json","stream"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"
thiserror = "1.0.61"
serde_json = "1.0.0"
serde = { version = "1.0.188", features = ["derive"] }

futures-util = { version = "0.3.28" }
bytes = "1.6.0"
eventsource-stream = "0.2.3"

clap = { version = "4.5.8", features = ["derive"] }
rustyline = "14.0.0"


[features]
streams = []
